--- a/app.json
+++ b/app.json
@@ -1,22 +1,34 @@
 {
   "expo": {
-    "name": "FlowState",
-    "slug": "FlowState",
+    "name": "FlowState: Diamond Clarity",
+    "slug": "flowstate-diamond-clarity",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "flowstate",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "description": "Discover your diamond clarity moments. Track energy, focus, and mental precision with professional-grade analytics.",
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.flowstate.diamondclarity",
+      "buildNumber": "1",
+      "infoPlist": {
+        "CFBundleDisplayName": "FlowState",
+        "NSAppTransportSecurity": {
+          "NSAllowsArbitraryLoads": false
+        }
+      }
     },
     "android": {
+      "package": "com.flowstate.diamondclarity",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#e1e8ff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "permissions": []
     },
     "web": {
       "bundler": "metro",
@@ -33,7 +45,8 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+      "expo-sqlite"
     ],
     "experiments": {
       "typedRoutes": true
