--- a/ios/FlowStateDiamondClarity.xcodeproj/xcshareddata/xcschemes/FlowStateDiamondClarity.xcscheme
+++ b/ios/FlowStateDiamondClarity.xcodeproj/xcshareddata/xcschemes/FlowStateDiamondClarity.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "HelloWorld.app"
-               BlueprintName = "HelloWorld"
-               ReferencedContainer = "container:HelloWorld.xcodeproj">
+               BuildableName = "FlowStateDiamondClarity.app"
+               BlueprintName = "FlowStateDiamondClarity"
+               ReferencedContainer = "container:FlowStateDiamondClarity.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "HelloWorldTests.xctest"
-               BlueprintName = "HelloWorldTests"
-               ReferencedContainer = "container:HelloWorld.xcodeproj">
+               BuildableName = "FlowStateDiamondClarityTests.xctest"
+               BlueprintName = "FlowStateDiamondClarityTests"
+               ReferencedContainer = "container:FlowStateDiamondClarity.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "HelloWorld.app"
-            BlueprintName = "HelloWorld"
-            ReferencedContainer = "container:HelloWorld.xcodeproj">
+            BuildableName = "FlowStateDiamondClarity.app"
+            BlueprintName = "FlowStateDiamondClarity"
+            ReferencedContainer = "container:FlowStateDiamondClarity.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "HelloWorld.app"
-            BlueprintName = "HelloWorld"
-            ReferencedContainer = "container:HelloWorld.xcodeproj">
+            BuildableName = "FlowStateDiamondClarity.app"
+            BlueprintName = "FlowStateDiamondClarity"
+            ReferencedContainer = "container:FlowStateDiamondClarity.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
